[package]
name = "sdk-on-chain-examples"
version = "0.1.2"
description = "Examples for using the Darklake DEX SDK"
authors = ["Darklake Team"]
license = "MIT"
edition = "2021"

[dependencies]
sdk-on-chain = { git = "https://github.com/darklakefi/sdk-on-chain.git", branch = "feature/dar-705-sdk-restructure", version = "0.1.3" }
solana-sdk = "2.2.0"
solana-rpc-client = "2.2.0"
solana-rpc-client-api = "2.2.0"
solana-transaction-status = "2.2.0"
anyhow = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
base64 = "0.21"
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]