[package]
name = "sdk-on-chain-examples"
version = "0.2.0"
description = "Examples for using the Darklake DEX on-chain SDK"
authors = ["Darklake Team"]
license = "MIT"
edition = "2021"

[dependencies]
darklake-sdk-on-chain = { git = "https://github.com/darklakefi/sdk-on-chain.git", branch = "main", version = "0.2.0" }
solana-sdk = "2.2.0"
solana-rpc-client = "2.2.0"
solana-rpc-client-api = "2.2.0"
solana-transaction-status = "2.2.0"
anyhow = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
base64 = "0.21"
serde_json = "1.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
solana-system-interface = "1.0.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]