[package]
name = "sdk-on-chain-examples"
version = "0.3.0"
description = "Examples for using the Darklake DEX on-chain SDK"
authors = ["Darklake Team"]
license = "MIT"
edition = "2024"

[dependencies]
darklake-sdk-on-chain = "0.3.1"
solana-sdk = "=2.1.0"
solana-rpc-client = "^2.1.0"
solana-rpc-client-api = "^2.1.0"
solana-transaction-status = "^2.1.0"
anyhow = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
base64 = "0.21"
serde_json = "1.0"
spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
solana-system-interface = { version = "1.0.0", features = ["bincode"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]